--- a/index.html
+++ b/index.html
@@ -111,7 +111,8 @@
 	  <option value="value1">watch 497 x 331</option> 
 	  <option value="value2">1webp transparent 400 x 301</option> 
 	  <option value="value3">2webp transparent 386 x 395</option> 
-	  <option value="value3">monkey 1132 x 849</option> 
+	  <option value="value4">3webp transparent 800 x 600</option> 
+	  <option value="value5">monkey 1132 x 849</option> 
 	</select>
         <label for="truncate">Truncation level: </label>
         <input name="tlevel" id="truncate" type="range" min="0" max="90" value="0" step="10" onchange="truncateChanged()">
@@ -185,6 +186,7 @@
          {path: "/assets/watch_by8.flif", credit:"https://unsplash.com/veri_ivanova"},
          {path: "/assets/1_webp_ll.flif"},
          {path: "/assets/2_webp_ll.flif"},
+         {path: "/assets/3_webp_ll.flif"},
          {path: "/assets/monkey.flif", credit:"https://unsplash.com/raf"}
       ];
 
