--- a/em-out/index.html
+++ b/em-out/index.html
@@ -22,11 +22,11 @@
   	  <option value="value4">3webp transparent 800 x 600</option> 
   	  <option value="value5">monkey 1132 x 849</option> 
   	</select>
-          <label for="truncate">Truncation level: </label>
+          <label for="truncate">Truncation: </label>
           <input name="tlevel" id="truncate" type="range" min="0" max="90" value="0" step="10" onchange="truncateChanged()">
           <output for="truncate" name="level">0</output>%
   
-          <label for="bgColor">Background color: </label>
+          <label for="bgColor">Bg color: </label>
           <input name="bgColor" id="bgColor" type="color" onchange="bgColorChanged()">
         </form>
       </span>
