--- a/em-out/index.html
+++ b/em-out/index.html
@@ -135,6 +135,16 @@
       /* } End of Viewer */
 
       function init() {
+        viewer.parentElement.hidden = true;
+        imgInfos.sort(function (a, b) {
+          if (!b.imgSize) {
+            return 1;
+          } else if (!a.imgSize) {
+            return -1;
+          } else {
+            return a.imgSize.height - b.imgSize.height;
+          }
+        });
         var selectElem = document.getElementById('imageSelect');
         function addOption(idx, title) {
           var optElem = document.createElement("option");
@@ -157,6 +167,7 @@
       init();
 
       function resetView() {
+        viewer.parentElement.hidden = false;
         document.getElementById('pngImg').src = ""
         var canvas = document.getElementById('canvas');
         var ctx = canvas.getContext("2d");
