simplified about page

--- a/em-out/index.html
+++ b/em-out/index.html
@@ -64,13 +64,12 @@
     <div id="aboutModal">
       <p class="closeButton"><input type="button" value="x" onclick="hideAbout()"></input></p>
       <h2>About this demo</h2>
-      <p>This is a playground for trying truncation for the new FLIF image format. It is also an early demo of a possible browser polyfill for the format.</p>
+      <p>This is a demo for the FLIF format and its stream truncation feature. It is also a demo of a browser polyfill for the format.</p>
       <h2>About FLIF</h2>
-      <p>FLIF is a lossless image format based on MANIAC compression. MANIAC (Meta-Adaptive Near-zero Integer Arithmetic Coding) is a variant of CABAC (context-adaptive binary arithmetic coding), where the contexts are nodes of decision trees which are dynamically learned at encode time.</p>
-      <p>FLIF outperforms PNG, FFV1, lossless WebP, lossless BPG and lossless JPEG2000 in terms of compression ratio.</p>
+      <p>FLIF is a lossless image format based on MANIAC compression. It outperforms PNG, FFV1, lossless WebP, lossless BPG and lossless JPEG2000 in terms of compression ratio.</p>
+      <h2>Status</h2>
       <p>Note that the FLIF spec is not yet defined completely. And the code is not optimised yet.</p>
       <p>Do not use this in production yet.</p>
-
       <h2>Links</h2>
       <p>FLIF <a href="http://flif.info">home page.</a> and <a href="https://github.com/jonsneyers/FLIF">source code.</a></p>
       <p>Poly FLIF <a href="https://github.com/uprootlabs/poly-flif">source code.</a></p>
